--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 
 body {
-	min-width:590;
+	min-width:590px;
 	width: 100%;
 	font-family: 'Work Sans', sans-serif;
 }
@@ -22,10 +22,6 @@ header {
 
 #logo {
 	
-	
-	/*width: 100px;
-	max-height: 70px;*/
-	/*position:fixed;*/
 	margin-right: 10px;
 	float: left;
 	clear:both;
