--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
        font-size:14px;
 }
     }
-
+h2, p {color: white;}
 
 body {
 	min-width:590px;
@@ -64,7 +64,28 @@ li {
 	padding-right: 40px;
 
 }
+
 a.navlinks:hover {font-size: 1.1em;}
+
+a:link{
+  color: blue;
+}
+
+a:visited{
+  color: blue;
+}
+
+a:hover{
+  color: blue;
+}
+
+a:focus{
+  color: blue;
+}
+
+a:active{
+  color: blue;
+}
 
 .images {
 	width: 100%;
@@ -106,3 +127,4 @@ footer {
     
 	
 }
+
